--- a/index.html
+++ b/index.html
@@ -21,48 +21,48 @@
             <h4 id="msg2">⊂ニ二( ＾ω＾)ニ二⊃しゃっふる⊂ニ二( ＾ω＾)ニ二⊃</h4>
             <button id="shuffle" class="btn btn-primary btn-large" onclick="shuffle();">しゃっふる！！！</button>
         </div>
-        <div class="row">
-            <div class="span4 offset8 well text-center ">
+        <div class="row-fluid">
+            <div class="span3 offset6 well text-center ">
                 <h3 class="text-info well text-center well-small pull-left" id="seat_1"></h3>
                 <h3 class="text-info well text-center well-small pull-right" id="seat_2"></h3>
             </div>
-            <div class="span4 well text-center ">
+            <div class="span3 well text-center ">
                 <h3 class="text-info well text-center well-small pull-left" id="seat_3"></h3>
                 <h3 class="text-info well text-center well-small pull-right" id="seat_4"></h3>
             </div>
         </div>
-        <div class="row">
-            <div class="span4 well text-center ">
+        <div class="row-fluid">
+            <div class="span3 well text-center ">
                 <h3 class="text-info well text-center well-small pull-left" id="seat_5"></h3>
                 <h3 class="text-info well text-center well-small pull-right" id="seat_6"></h3>
             </div>
-            <div class="span4 well text-center ">
+            <div class="span3 well text-center ">
                 <h3 class="text-info well text-center well-small pull-left" id="seat_7"></h3>
                 <h3 class="text-info well text-center well-small pull-right" id="seat_8"></h3>
             </div>
-            <div class="span4 well text-center ">
+            <div class="span3 well text-center ">
                 <h3 class="text-info well text-center well-small pull-left" id="seat_9"></h3>
                 <h3 class="text-info well text-center well-small pull-right" id="seat_10"></h3>
             </div>
-            <div class="span4 well text-center ">
+            <div class="span3 well text-center ">
                 <h3 class="text-info well text-center well-small pull-left" id="seat_11"></h3>
                 <h3 class="text-info well text-center well-small pull-right" id="seat_12"></h3>
             </div>
         </div>
-        <div class="row">
-            <div class="span4 well text-center ">
+        <div class="row-fluid">
+            <div class="span3 well text-center ">
                 <h3 class="text-info well text-center well-small pull-left" id="seat_13"></h3>
                 <h3 class="text-info well text-center well-small pull-right" id="seat_14"></h3>
             </div>
-            <div class="span4 well text-center ">
+            <div class="span3 well text-center ">
                 <h3 class="text-info well text-center well-small pull-left" id="seat_15"></h3>
                 <h3 class="text-info well text-center well-small pull-right" id="seat_16"></h3>
             </div>
-            <div class="span4 well text-center ">
+            <div class="span3 well text-center ">
                 <h3 class="text-info well text-center well-small pull-left" id="seat_17"></h3>
                 <h3 class="text-info well text-center well-small pull-right" id="seat_18"></h3>
             </div>
-            <div class="span4 well text-center ">
+            <div class="span3 well text-center ">
                 <h3 class="text-info well text-center well-small pull-left" id="seat_19"></h3>
                 <h3 class="text-info well text-center well-small pull-right" id="seat_20"></h3>
             </div>
