--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Shuffle</title>
 </head>
 <body>
-        <div class="row hero-unit text-center">
+        <div class="row well well-small text-center">
             <h4 id="msg1" style="display:none">⊂ニ二( ＾ω＾)ニ二⊃しゃっふる⊂ニ二(＾ω＾ )ニ二⊃</h4>
             <h3>
                 ＿人人人人人人人人人人人人＿</br>
@@ -20,10 +20,8 @@
                 ￣Y^Y^Y^Y^Y^Y^Y^Y^Y^Y^Y￣</br>
             </h3>
             <h4 id="msg2">⊂ニ二( ＾ω＾)ニ二⊃しゃっふる⊂ニ二( ＾ω＾)ニ二⊃</h4>
-            <button id="shuffle" class="btn btn-primary btn-large" onclick="shuffle();">しゃっふる！！！</button>
-        </div>
-        <div class="row well text-center  text-center">
-            <h2 class="text-warning">前方 - プロジェクター</h2>
+            <button id="shuffle" class="btn btn-primary btn-small" onclick="shuffle();">しゃっふる！！！</button>
+            <h3 class="text-warning well well-small">前方 - プロジェクター</h3>
         </div>
         <div class="row-fluid">
             <div class="span3 well text-center ">
