音が出るようになった
ファイルの追加
タグ追加

--- a/index.html
+++ b/index.html
@@ -69,5 +69,7 @@
                 <p class="text-info well text-center name pull-right" id="seat_20"></p>
             </div>
         </div>
+        <audio id="dram" src="mp3/Dramroll.mp3"></audio>
+        <audio id="sinbal" src="mp3/sinbal.mp3"></audio>
 </body>
 </html>
